--- a/mmcalendar/src/main/res/layout/item_day_view.xml
+++ b/mmcalendar/src/main/res/layout/item_day_view.xml
@@ -33,8 +33,8 @@
         tools:text="နတ်တော်လပြည့်ကျေ"
         android:textColor="@color/colorRed"
         android:layout_marginTop="@dimen/_2sdp"
-        android:textSize="@dimen/_8sdp"
+        android:textSize="@dimen/_6sdp"
         android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/tvBurmeseDay"/>
+        android:layout_toStartOf="@+id/tvWesternDay"/>
 
 </RelativeLayout>
