update: month title

--- a/mmcalendar/src/main/res/layout/item_day_view.xml
+++ b/mmcalendar/src/main/res/layout/item_day_view.xml
@@ -23,6 +23,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:textSize="@dimen/_15sdp"
+        android:padding="@dimen/_2sdp"
         android:textColor="@color/colorBlue"
         android:textStyle="bold"/>
 
