--- a/mmcalendar/src/main/res/layout/item_month_header.xml
+++ b/mmcalendar/src/main/res/layout/item_month_header.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tvTitleOne"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_toStartOf="@+id/rightArrow"
         android:gravity="end"
         android:textColor="@color/colorWhite"
         tools:text="Title One"
@@ -21,9 +21,10 @@
         android:id="@+id/tvTitleTwo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_toStartOf="@+id/rightArrow"
         android:layout_below="@+id/tvTitleOne"
         tools:text="Title Two"
+        android:layout_marginTop="@dimen/_2sdp"
         android:textColor="@color/colorWhite"
         android:textStyle="bold"/>
 
@@ -33,7 +34,23 @@
         android:layout_height="wrap_content"
         tools:text="DECEMBER\n2019"
         android:textStyle="bold"
+        android:layout_toEndOf="@+id/leftArrow"
         android:textColor="@color/colorWhite"/>
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/rightArrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_keyboard_arrow_right_white_24dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"/>
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/leftArrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_keyboard_arrow_left_white_24dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"/>
 
 </RelativeLayout>
