--- a/app/src/main/res/layout/item_month_view.xml
+++ b/app/src/main/res/layout/item_month_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.myozawoo.mmcalendar.view.SingleMonthView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="500dp"
+    android:layout_height="wrap_content"
     android:id="@+id/calendarView"/>
