--- a/mmcalendar/src/main/res/layout/item_month_header.xml
+++ b/mmcalendar/src/main/res/layout/item_month_header.xml
@@ -4,14 +4,15 @@
     android:layout_height="@dimen/_40sdp"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:background="@color/colorBlue"
-    android:padding="@dimen/_5sdp">
+    android:background="#c9c9c9"
+    android:padding="@dimen/_5sdp"
+    android:visibility="visible">
 
     <TextView
         android:id="@+id/tvTitleOne"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toStartOf="@+id/rightArrow"
+        android:layout_alignParentEnd="true"
         android:gravity="end"
         android:textColor="@color/colorWhite"
         tools:text="Title One"
@@ -21,36 +22,14 @@
         android:id="@+id/tvTitleTwo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toStartOf="@+id/rightArrow"
+        android:layout_alignParentEnd="true"
         android:layout_below="@+id/tvTitleOne"
         tools:text="Title Two"
         android:layout_marginTop="@dimen/_2sdp"
         android:textColor="@color/colorWhite"
         android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/tvTitleThree"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="DECEMBER\n2019"
-        android:textStyle="bold"
-        android:layout_toEndOf="@+id/leftArrow"
-        android:textColor="@color/colorWhite"/>
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/rightArrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_keyboard_arrow_right_white_24dp"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"/>
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/leftArrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_keyboard_arrow_left_white_24dp"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"/>
 
 </RelativeLayout>
