feat: English display for selected date

--- a/mmcalendar/src/main/res/layout/dialog_fragment_date_picker.xml
+++ b/mmcalendar/src/main/res/layout/dialog_fragment_date_picker.xml
@@ -45,7 +45,11 @@
         android:id="@+id/tvResult"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/_5sdp"
+        android:paddingTop="@dimen/_5sdp"
+        android:paddingBottom="@dimen/_5sdp"
+        android:paddingStart="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_10sdp"
+        android:text="hello"
         android:gravity="end"
         android:background="#AAc9c9c9"
         android:textColor="#000000"
