--- a/mmcalendar/src/main/res/layout/item_month_header.xml
+++ b/mmcalendar/src/main/res/layout/item_month_header.xml
@@ -5,7 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="#c9c9c9"
-    android:padding="@dimen/_5sdp"
+    android:paddingTop="@dimen/_5sdp"
+    android:paddingBottom="@dimen/_5sdp"
+    android:paddingStart="@dimen/_10sdp"
+    android:paddingEnd="@dimen/_10sdp"
     android:visibility="visible">
 
     <TextView
