--- a/mmcalendar/src/main/res/drawable/bg_rounded_grey.xml
+++ b/mmcalendar/src/main/res/drawable/bg_rounded_grey.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="#c4c4c4"/>
+    <solid android:color="#eaeaea"/>
 
     <corners android:radius="4dp"/>
 
